<resources>
    <string name="app_name">Pomodoro app</string>
    <string name="menuEdit">Edit</string>
    <string name="nuevoPomodoro">Pomodoro</string>
    <string name="loadingData">Loading data...</string>
    <string name="encurso">Online</string>
    <string name="myProjects">Projects</string>
    <string name="activePomodoro">Active Pomodoro</string>
    <string name="activePomo">Active</string>
    <string name="active">Join</string>
    <string name="settings">Settings</string>
    <string name="addProject">Project</string>
    <string name="logout">Logout</string>
    <string name="projectName">Proyect name</string>
    <string name="newProject">New project</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="continuar">Continue</string>
    <string name="projectCreated">The project has been created</string>
    <string name="error">There was an error</string>
    <string name="pomodoroNotActive">The pomodoro is not active</string>
    <string name="work">Work</string>
    <string name="descansar">Relax</string>
    <string name="work2">Work</string>
    <string name="descansar2">Relax</string>
    <string name="leaveProject">Leave project</string>
    <string name="confirmarAbandono">Leave project</string>
    <string name="projectAbandoned">The project has been left</string>
    <string name="confirmarAbandono_body">Are you sure you want to leave and delete this group?</string>
    <string name="addUserToProject">Add user</string>
    <string name="userAddedToProject">The user has been added successfully to the project</string>
    <string name="username">Username</string>
    <string name="correo">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="valuesEmptyError">One of the fields is empty</string>
    <string name="loadingTitle">Loading</string>
    <string name="loadingBody">Wait a second..</string>
    <string name="serverError">There was a server error</string>
    <string name="incorrectPassword">The password is not correct</string>
    <string name="userSuccessfullyRegistered">The user has been successfully registered</string>
    <string name="userAlreadyExists">This username already exists</string>
    <string name="preferences_LanguageTitle">Select the language</string>
    <string name="preferences_LanguageSummary">Change the app language</string>
    <string name="preferences_languagesOptionSystem">System</string>
    <string name="preferences_languagesOptionEnglish">English</string>
    <string name="preferences_languagesOptionSpanish">Spanish</string>
    <string name="preferences_basicConfiguration">Basic configuration</string>
    <string name="preferences_saved">The new configuration has been saved</string>
    <string name="newPomodoro">New pomodoro</string>
    <string name="minutes">Minutes</string>
    <string name="tiempoTrabajo">Minutes to work</string>
    <string name="tiempoDescanso">Minutes to relax</string>
    <string name="pomodoroZero">Minutes have to be greater than zero</string>
    <string name="noPomodoroActive">There is no active pomodoro</string>
    <string name="pomodoroActive">There is an active pomodoro</string>
    <string name="advancedSettings">Advanced configuration</string>
    <string name="keepScreenOn">Keep screen on for the pomodoros</string>
    <string name="detener">Stop</string>
    <string name="pomodoroStopped">Pomodoro stopped</string>
    <string name="sonido">Music when pomodoro ends</string>
    <string name="pomodoroCreated">The pomodoro has been created</string>
    <string name="start">Start</string>
    <string name="pomodoroAlreadyActive">The pomodoro is already active</string>
    <string name="internetNeeded">You need internet connection for this</string>
    <string name="abandonar">Leave</string>
    <string name="finishPomodoro">First stop the pomodoro you started</string>
    <string name="cannotLeave">You cannot leave the group until you stop the active pomodoro</string>
    <string name="pomodoroDeleted">The pomodoro has been successfully deleted</string>
    <string name="pomodoroNotExists">The pomodoro does not exist anymore</string>
    <string name="chat">Chat</string>
    <string name="enterMessage">Enter the message...</string>
    <string name="sendMessage">Send</string>
    <string name="messageEmpty">The message is empty</string>
    <string name="add">Add</string>
    <string name="see">See</string>
    <string name="timeToWork">It\'s time to work 💪</string>
    <string name="timeToRelax">It\'s time to relax 🎉</string>
    <string name="googlePlayNeeded">You need Google Play for this app to work</string>
    <string name="backgroundNeeded">You need to enabled background mode for this app to work. Go to battery settings and enabled it.</string>
    <string name="someoneelse">Someone else has logged in with this user</string>
    <string name="adimagen">Add background image</string>
    <string name="colordetexto">Choose color text </string>
    <string name="white">White</string>
    <string name="black">Black </string>
    <string name="preferences_colortext">Change the pomodoro text color</string>
    <string name="preferences_colorTitle">Select the color of text</string>
    <string name="preferences_image">Change the background image</string>
    <string name="preferences_imageTitle">Select the background image</string>
    <string name="photo">Camera photo</string>
    <string name="gallery">From gallery</string>
    <string name="imgbackground">Background image for pomodoro</string>
    <string name="gmtneeded">You need to configure the mobile phone to have GMT zone</string>
    <string name="imageNotFound">The image could not be found</string>
    <string name="passwordShort">The password needs to be at least 4 letters long</string>
    <string name="emailNotValid">The email is not valid</string>
</resources>
