<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preferences_basicConfiguration">
        <ListPreference
            android:dialogTitle="@string/preferences_LanguageTitle"
            android:entries="@array/languages"
            android:defaultValue="default"
            android:entryValues="@array/languagesCodes"
            android:key="language"
            android:summary="@string/preferences_LanguageSummary"
            android:title="@string/preferences_LanguageTitle" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/advancedSettings">
        <SwitchPreference
            android:defaultValue="false"
            android:key="keepScreenOn"
            android:title="@string/keepScreenOn" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="sound"
            android:title="@string/sonido" />
    </PreferenceCategory>
</PreferenceScreen>