<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".fragments.registro">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:orientation="vertical"
        tools:context=".fragments.registro">


        <EditText
            android:id="@+id/Nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/username"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/correo"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnguardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/colorWhite"
            app:backgroundTint="@color/colorPrimary" />


    </LinearLayout>

</FrameLayout>